--- a/.travis.yml
+++ b/.travis.yml
@@ -27,3 +27,16 @@ notifications:
   email:
     recipients:
       - ssoooooda@gmail.com
+
+deploy:
+  - provider: s3
+    access_key_id: $AWS_ACCESS_KEY # Travis repo settings에 설정된 값
+    secret_access_key: $AWS_SECRET_KEY # Travis repo settings에 설정된 값
+    bucket: bjh-study
+    region: ap-northeast-2
+    skip_cleanup: true
+    acl: public_read
+    wait-until-deployed: true
+    on:
+      repo: SSoooda/bjh
+      branch: main
