버킷에 압축해서 업로드

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,11 @@ notifications:
     recipients:
       - ssoooooda@gmail.com
 
+before_deploy:
+  - zip -r springboot-webservice *
+  - mkdir -p deploy
+  - mv springboot-webservice.zip deploy/springboot-webservice.zip
+
 deploy:
   - provider: s3
     access_key_id: $AWS_ACCESS_KEY # Travis repo settings에 설정된 값
@@ -37,6 +42,7 @@ deploy:
     skip_cleanup: true
     acl: public_read
     wait-until-deployed: true
+    local_dir: deploy
     on:
       repo: SSoooda/bjh #Github 주소
       branch: main
