--- a/.travis.yml
+++ b/.travis.yml
@@ -47,3 +47,17 @@ deploy:
       repo: SSoooda/bjh #Github 주소
       branch: main
 
+  - provider: codedeploy
+    access_key_id: $AWS_ACCESS_KEY # Travis repo settings에 설정된 값
+    secret_access_key: $AWS_SECRET_KEY # Travis repo settings에 설정된 값
+    bucket: bjh-study # S3 버킷
+    key: bjh.zip # 빌드 파일을 압축해서 전달
+    bundle_type: zip
+    application: bjh # 웹 콘솔에서 등록한 CodeDeploy 어플리케이션
+    deployment_group: bjh-group # 웹 콘솔에서 등록한 CodeDeploy 배포 그룹
+    region: ap-northeast-2
+    wait-until-deployed: true
+    on:
+      repo: SSoooda/bjh
+      branch: main
+
