--- a/build.gradle
+++ b/build.gradle
@@ -2,10 +2,11 @@ plugins {
     id 'org.springframework.boot' version '2.7.5'
     id 'io.spring.dependency-management' version '1.0.15.RELEASE'
     id 'java'
+    id 'eclipse'
 }
 
 group = 'com'
-version = '0.0.3'
+version = '0.0.4'
 sourceCompatibility = '17'
 
 configurations {
