--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -2,6 +2,16 @@
 spring:
   profiles:
     active: local # 기본 환경 선택
+  jpa:
+    properties:
+      hibernate:
+        dialect:
+          nodeValue: org.hibernate.dialect.MySQL57Dialect
+          storage_engine: innodb
+  datasource:
+    hikari:
+      jdbc-url: jdbc:h2:mem://localhost/~/testdb;MODE=MYSQL
+
 
 # local 환경
 ---
