--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,15 +1,7 @@
 spring:
   profiles:
     active: local
-  jpa:
-    properties:
-      hibernate:
-        dialect:
-          nodeValue: org.hibernate.dialect.MySQL57Dialect
-          storage_engine: innodb
-  datasource:
-    hikari:
-      jdbc-url: jdbc:h2:mem://localhost/~/testdb;MODE=MYSQL
+
 
 ---
 
@@ -18,7 +10,6 @@ spring:
     show-sql: true
     hibernate:
       ddl-auto: create-drop
-    defer-datasource-initialization: true
   h2:
     console:
       enabled: true
@@ -34,20 +25,18 @@ spring:
 
 # 운영 환경
 ---
-spring.profiles.include: real-db
 
 server:
   port: 8081
 spring:
   config:
     activate:
-      on-profile:
+      on-profile: set1
 ---
-spring.profiles.include: real-db
 
 server:
   port: 8082
 spring:
   config:
     activate:
-      on-profile:
+      on-profile: set2
